...
    </string-array>
    <string name="description_ascending">Description Ascending</string>
    <string name="description_descending">Description Descending</string>
    <string name="amount_ascending">Amount Ascending</string>
    <string name="amount_descending">Amount Descending</string>

    <string name="create_account">Create Account</string>
    <string name="registration_button">Register</string>
    <string name="registration_prename">First Name</string>
    <string name="registration_lastname">Name</string>
    <string name="change_lang">Change language</string>

// drawer menu
    <string name="logout">Logout</string>
    <string name="home">Home</string>

...
