...

        <TextView
            android:id="@+id/email_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/login_email"
            app:layout_constraintBottom_toTopOf="@id/registration_email"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/registration_lastname" />

        <EditText
            android:id="@+id/registration_email"
...

        <TextView
            android:id="@+id/password_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/login_password"
            app:layout_constraintBottom_toTopOf="@id/registration_password"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/registration_email" />

        <EditText
            android:id="@+id/registration_password"
...
