...
        android:title="@string/home" />
    <item
        android:id="@+id/buttonChangeLang"
        android:title="@string/change_lang" />

    <item
        android:id="@+id/navigation_logout"
        android:title="@string/logout" />
</menu>
