<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:clickable="true"
    tools:context=".ProfileActivity"
    android:focusable="true"
    android:id="@+id/drawerLayout">

    <include
        android:id="@+id/profile_content"
        layout="@layout/content_profile" />

    <com.google.android.material.navigation.NavigationView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:headerLayout="@layout/navigation_header"
        app:menu="@menu/navigation_menu"
        android:layout_gravity="start"
        android:id="@+id/nav_menu"/>

</androidx.drawerlayout.widget.DrawerLayout>